# ml_cpu_optm

./: .gitignore  Makefile  README.md  naive.txt  naive_euclidean_distance_bytecode.txt  naive_loop_unrolling.txt  pyproject.toml  pyrightconfig.json  vectorized.txt
c/: naive.c  naive_cache_friendly.c  naive_loop_unrolling.c  vectorized.c  vectorized_cache_friendly_loop_unrolling.c  vectorized_openmp.c
ml_cpu_optm/: __main__.py  data.py  naive.py  naive_cache_friendly.py  naive_cache_friendly_without_waste.py  naive_loop_unrolling_without_waste.py  naive_without_waste.py  numba_optimization.py  numba_parallel.py  numpy_vectorized.py  vectorized_cache_friendly_loop_unrolling_without_waste.py  vectorized_without_waste.py  vectorized_without_waste_openmp.py
